# homework_web_8

./: README.md  hw.py  models.py  pyproject.toml
part_2/: consumer.py  model.py  producer.py
