[tool.poetry]
name = "homework-web-8"
version = "0.1.0"
description = ""
authors = ["ivan-markovskyi <ivan.markovskyi.in@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.27.0"
pika = "^1.3.2"
faker = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
